# mpcs51045-advanced-cpp

./: .gitignore  CMakeLists.txt
dtpf/: CMakeLists.txt  README.md  concurrency.cpp  config_parser.cpp  execution_engine.cpp  factory_pattern.cpp  main_framework.cpp  meta_programming.cpp
hw12/12.1/: CMakeLists.txt  removePointer.cpp
hw12/12.2/: CMakeLists.txt  reference.cpp
hw12/12.3/: CMakeLists.txt  factory.cpp  factory.h  trainFactory.cpp
hw12/12.4/: CMakeLists.txt  flexible_factory.cpp  flexible_factory.h
hw12/12.5/: patameterized.cpp
hw13/13.1/: ostream_joiner.cpp
hw13/13.2/: explanation.txt  sort.cpp
hw13/13.3/: explanation.txt  my_promise.cpp  my_promoise.h
hw15/: CMakeLists.txt  explanation.txt  main.cpp
hw16/libstudxml/: Makefile  Makefile.am  Makefile.in  aclocal.m4  build.sh  config.h  config.lt  config.status  configure  configure.ac  libstudxml.pc  libtool  tester  version
hw16/libstudxml/doc/: Makefile  Makefile.am  Makefile.in
hw16/libstudxml/examples/: Makefile  Makefile.am  Makefile.in  examples-vc10.sln  examples-vc11.sln  examples-vc12.sln  examples-vc9.sln  test.bat
hw16/libstudxml/examples/hybrid/: Makefile  Makefile.am  Makefile.in  hybrid-vc10.vcxproj  hybrid-vc10.vcxproj.filters  hybrid-vc11.vcxproj  hybrid-vc11.vcxproj.filters  hybrid-vc12.vcxproj  hybrid-vc12.vcxproj.filters  hybrid-vc9.vcproj
hw16/libstudxml/examples/hybrid/.deps/: dom.Po  driver.Po
hw16/libstudxml/examples/hybrid/.libs/: driver
hw16/libstudxml/examples/inheritance/: Makefile  Makefile.am  Makefile.in  inheritance-vc10.vcxproj  inheritance-vc10.vcxproj.filters  inheritance-vc11.vcxproj  inheritance-vc11.vcxproj.filters  inheritance-vc12.vcxproj  inheritance-vc12.vcxproj.filters  inheritance-vc9.vcproj
hw16/libstudxml/examples/inheritance/.deps/: driver.Po
hw16/libstudxml/examples/inheritance/.libs/: driver
hw16/libstudxml/examples/performance/: Makefile  Makefile.am  Makefile.in  performance-vc10.vcxproj  performance-vc10.vcxproj.filters  performance-vc11.vcxproj  performance-vc11.vcxproj.filters  performance-vc12.vcxproj  performance-vc12.vcxproj.filters  performance-vc9.vcproj
hw16/libstudxml/examples/performance/.deps/: driver.Po  time.Po
hw16/libstudxml/examples/performance/.libs/: driver
hw16/libstudxml/examples/persistence/: Makefile  Makefile.am  Makefile.in  persistence-vc10.vcxproj  persistence-vc10.vcxproj.filters  persistence-vc11.vcxproj  persistence-vc11.vcxproj.filters  persistence-vc12.vcxproj  persistence-vc12.vcxproj.filters  persistence-vc9.vcproj
hw16/libstudxml/examples/persistence/.deps/: position.Po
hw16/libstudxml/examples/persistence/.libs/: driver
hw16/libstudxml/examples/processing/: Makefile  Makefile.am  Makefile.in  processing-vc10.vcxproj  processing-vc10.vcxproj.filters  processing-vc11.vcxproj  processing-vc11.vcxproj.filters  processing-vc12.vcxproj  processing-vc12.vcxproj.filters  processing-vc9.vcproj
hw16/libstudxml/examples/processing/.deps/: driver.Po
hw16/libstudxml/examples/processing/.libs/: driver
hw16/libstudxml/examples/roundtrip/: Makefile  Makefile.am  Makefile.in  roundtrip-vc10.vcxproj  roundtrip-vc10.vcxproj.filters  roundtrip-vc11.vcxproj  roundtrip-vc11.vcxproj.filters  roundtrip-vc12.vcxproj  roundtrip-vc12.vcxproj.filters  roundtrip-vc9.vcproj
hw16/libstudxml/examples/roundtrip/.libs/: driver
hw16/libstudxml/tests/: Makefile  Makefile.am  Makefile.in  test.bat  tests-vc10.sln  tests-vc11.sln  tests-vc12.sln  tests-vc9.sln
hw16/libstudxml/tests/parser/: Makefile  Makefile.am  Makefile.in  parser-vc10.vcxproj  parser-vc10.vcxproj.filters  parser-vc11.vcxproj  parser-vc11.vcxproj.filters  parser-vc12.vcxproj  parser-vc12.vcxproj.filters  parser-vc9.vcproj
hw16/libstudxml/tests/parser/.deps/: driver.Po
hw16/libstudxml/tests/parser/.libs/: driver
hw16/libstudxml/tests/roundtrip/: Makefile  Makefile.am  Makefile.in  driver  roundtrip-vc10.vcxproj  roundtrip-vc10.vcxproj.filters  roundtrip-vc11.vcxproj  roundtrip-vc11.vcxproj.filters  roundtrip-vc12.vcxproj  roundtrip-vc12.vcxproj.filters  roundtrip-vc9.vcproj
hw16/libstudxml/tests/roundtrip/.deps/: driver.Po
hw16/libstudxml/tests/roundtrip/.libs/: driver
hw16/libstudxml/tests/serializer/: Makefile  Makefile.am  Makefile.in  serializer-vc10.vcxproj  serializer-vc10.vcxproj.filters  serializer-vc11.vcxproj  serializer-vc11.vcxproj.filters  serializer-vc12.vcxproj  serializer-vc12.vcxproj.filters  serializer-vc9.vcproj
hw16/libstudxml/tests/serializer/.deps/: driver.Po
hw16/libstudxml/tests/serializer/.libs/: driver
hw16/libstudxml/xml/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  libstudxml-vc10.vcxproj  libstudxml-vc10.vcxproj.filters  libstudxml-vc11.vcxproj  libstudxml-vc11.vcxproj.filters  libstudxml-vc12.vcxproj  libstudxml-vc12.vcxproj.filters  libstudxml-vc9.vcproj  libstudxml.la  parser.lo  qname.lo  serializer.lo  stamp-h1  value-traits.lo
hw16/libstudxml/xml/.deps/: parser.Plo  qname.Plo  serializer.Plo  value-traits.Plo
hw16/libstudxml/xml/.libs/: libstudxml-1.0.dylib  libstudxml.dylib  libstudxml.la  libstudxml.lai
hw16/libstudxml/xml/details/: stamp-h2
hw16/libstudxml/xml/details/expat/: xmlparse.lo  xmlrole.lo  xmltok.lo
hw16/libstudxml/xml/details/expat/.deps/: xmlparse.Plo  xmlrole.Plo  xmltok.Plo
hw16/libstudxml/xml/details/genx/: char-props.lo  genx.lo
hw16/libstudxml/xml/details/genx/.deps/: char-props.Plo  genx.Plo
hw16/xmlDataBind/: EnhancedNoteModifier.cpp  IndentStream.cpp  IndentStream.h  Makefile  NoteModifier.cpp  NoteTest.cpp  advanced_factory.h  charProps.c  class_formatter.h  driver.cpp  enhanced_note.h  enhanced_note.xml  enhanced_note.xsd  formatter.h  genx.c  my_type_traits.h  note.h  note.xml  note.xsd  ostream_joiner.h  serializer_decl_formatter.h  struct_formatter.h  variadic_examples.h  xmlbind.h  xsd2cpp  xsd2cpp.h
hw16/xmlDataBind/fmt/: core.h  format-inl.h  format.cc  format.h
hw16/xmlDataBind/xml/details/: config.h
hw17/17.1/: explanation.txt
hw17/17.2/: main.cpp
hw17/17.3/: explanation.cpp
