# file      : examples/Makefile.am
# copyright : Copyright (c) 2013-2014 Code Synthesis Tools CC
# license   : MIT; see accompanying LICENSE file

SUBDIRS = roundtrip processing persistence inheritance hybrid performance
EXTRA_DIST = README test.bat examples-vc9.sln examples-vc10.sln examples-vc11.sln examples-vc12.sln
